samples/_failures_safe/1761084164_09075a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3d7e723.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_c3d7e723.c:164:13: error: expected expression at end of input
  164 |             if (parser->current_token.type == TOKEN_IDENTIFIER ||
      |             ^~
./samples/SAFE/__tmp_c3d7e723.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3d7e723.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3d7e723.c:164:13: error: expected declaration or statement at end of input
